style: fix modal style on tablet

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -849,6 +849,11 @@ ol {
 
 @media only screen and (min-width: 625px) {
 
+    .Modal {
+        bottom: 50%;
+
+    }
+
     .Modal-Loading {
         left: 40%;
         right: 40%;
